src/main/java/com/example/sqlvericek/Error/PaxError/ZeroPaxError.java
package com.example.sqlvericek.Error.PaxError;

import com.example.sqlvericek.Error.ErrorsTypeModel.ErrorsType;

public class ZeroPaxError {
    private ErrorsType errors;

    public ErrorsType getErrors() {
        return errors;
    }

    public void setErrors(ErrorsType value) {
        this.errors = value;
    }
}
